--- a/css/musicMedia.scss
+++ b/css/musicMedia.scss
@@ -40,6 +40,10 @@ $disc : "./img/disc.png";
     user-select: $mod;
 }
 
+.musicMedia-wrap-t-5 {
+    @include t(0.5);
+}
+
 .musicMedia-wrap {
     *::selection {
         background: transparent;
@@ -147,15 +151,9 @@ $disc : "./img/disc.png";
         -webkit-animation-fill-mode: forwards;
     }
 
-    .t-5 {
-        @include t(0.5);
-    }
-
-
     position: absolute;
     top: 250px;
     left: 0px;
-    z-index: 999;
 
     width: 500px;
     height: 190px;
@@ -170,7 +168,7 @@ $disc : "./img/disc.png";
         top: 190px;
         left: 0;
         
-        @include t(0.4);
+        @include t(1);
         overflow: hidden;
 
         width: 480px;
@@ -186,7 +184,7 @@ $disc : "./img/disc.png";
             margin-top: 1px;
             border-bottom: 1px solid #f5f5f5;
             overflow: hidden;
-            @include t(0.3);
+            @include t(0.5);
 
             .musicMedia-player-list {
                 width: calc(480px * 2);   
@@ -360,9 +358,9 @@ $disc : "./img/disc.png";
             z-index: -1;
             width: 100%;
             height: 100%;
-            background: linear-gradient(-45deg,rgba(214,81,162,0.4) 0%, rgba(80,216,192,0.3) 100%);
+            background: linear-gradient(-45deg,rgba(214,81,162,1) 0%, rgba(80,216,192,1) 100%);
             @include blur(20);
-            opacity: 0.3;
+            opacity: 0.5;
         }
     }
 
@@ -373,8 +371,7 @@ $disc : "./img/disc.png";
         z-index: -3;
         width: 100%;
         height: 100%;
-        overflow: hidden;
-        /* 控制背景透明度 */ 
+        overflow: hidden; 
         opacity: 0.8;
         box-shadow: 0px 0px 3px rgba(0,0,0,0.8);
         
@@ -862,6 +859,8 @@ $disc : "./img/disc.png";
         border: none;
     }
 }
+
+
 
 @keyframes rotate_360 {
     100% {
